# github_stats

./: .gitignore  LICENSE  README.md  action.yml  config.py  github_api.py  main.py  pyproject.toml  requirements.txt  svg_generator.py
.github/workflows/: update-major-tag.yml
src/github_stats/: __init__.py  cli.py  config.py  github_api.py  svg_generator.py
