[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github-stats"
version = "0.1.0"
description = "Generate themed GitHub stats SVG cards"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "Jinja2",
    "python-dotenv",
]

[project.scripts]
github-stats = "github_stats.cli:main"

[tool.setuptools.package-data]
github_stats = ["templates/*.svg"]
